fix: align icons with text and reduce vertical spacing in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -827,13 +827,13 @@ form label {
 @media screen and (max-width: 768px) {
   .feature-left {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
   }
   .feature-left .icon {
     position: relative;
     margin-right: 15px;
     padding: 0;
-    top: 0;
+    top: 5px;
     flex-shrink: 0;
   }
   .feature-left .feature-copy {
@@ -843,8 +843,11 @@ form label {
     padding: 0;
     text-align: left;
   }
+  .feature-left .feature-copy p {
+    margin-bottom: 10px;
+  }
   #gtco-services .feature-left {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
 }
 
@@ -912,7 +915,7 @@ form label {
 @media (max-width: 768px) {
   .gtco-tab-content .feature-left {
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     padding: 15px;
     text-align: left;
   }
@@ -921,11 +924,17 @@ form label {
     margin: 0 15px 0 0;
     padding: 0;
     flex-shrink: 0;
+    position: relative;
+    top: 5px;
   }
   
   .gtco-tab-content .feature-left .feature-copy {
     width: calc(100% - 50px);
     padding: 0;
+  }
+  
+  .gtco-tab-content .feature-left .feature-copy p {
+    margin-bottom: 10px;
   }
   
   .gtco-tab-content .gtco-bg {
@@ -936,7 +945,7 @@ form label {
   text-transform: uppercase;
   font-size: 18px;
   color: #5d5d5d;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .gtco-heading {
